getEmpById--Get Mapping Done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=practice
-spring.datasource.url=jdbc:mysql://localhost:3306/empPractice
+
+spring.datasource.url=jdbc:mysql://localhost:3306/empPractice?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Root@123
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
